<?xml version="1.0"?>
<package>
  <name>controller_node</name>
  <version>1.0.0</version>
  <description>The central controller for a BOTR Lander</description>
  
  <maintainer email="adithyabsk@gmail.com">Adithya Balaji</maintainer>

  <license>MIT</license>

  <author email="adithyabsk@gmail.com">Adithya Balaji</author> -->
  <author email="todo@todo.com">Alexander Allen</author> -->
  <author email="todo@todo.com">Anja Sheppard</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nmea_navsat_driver</build_depend>
  <build_depend>rosserial_server</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>rosserial_server</run_depend>
</package>
