<?xml version="1.0"?>
<package>
  <name>sensor_nodes</name>
  <version>1.0.0</version>
  <description>ROS wrapper package for BOTR lander sensor array</description>

  <maintainer email="adithyabsk@gmail.com">Adithya Balaji</maintainer>

  <license>MIT</license>

  <author email="adithyabsk@gmail.com">Adithya Balaji</author>
  <author email="todo@todo.com">Alexander Allen</author>
  <author email="todo@todo.com">Anja Sheppard</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
